@@ -16,7 +16,7 @@ public class PacketStorageInfoToClient {
     private String sortMode;
     private boolean groupMode;
     private String filter;
-
+    private boolean locked;
 
     public void toBytes(PacketBuffer buf) {
         buf.writeBlockPos(pos);
@@ -24,6 +24,7 @@ public class PacketStorageInfoToClient {
         buf.writeString(sortMode);
         buf.writeBoolean(groupMode);
         buf.writeString(filter);
+        buf.writeBoolean(locked);
     }
 
     public PacketStorageInfoToClient() {
@@ -35,15 +36,17 @@ public class PacketStorageInfoToClient {
         sortMode = buf.readString(32767);
         groupMode = buf.readBoolean();
         filter = buf.readString(32767);
+        locked = buf.readBoolean();
     }
 
     public PacketStorageInfoToClient(BlockPos pos,
-                                     String sortMode, String viewMode, boolean groupMode, String filter) {
+                                     String sortMode, String viewMode, boolean groupMode, String filter, boolean locked) {
         this.sortMode = sortMode;
         this.viewMode = viewMode;
         this.groupMode = groupMode;
         this.filter = filter;
         this.pos = pos;
+        this.locked = locked;
     }
 
     public void handle(Supplier<NetworkEvent.Context> supplier) {
@@ -52,7 +55,7 @@ public class PacketStorageInfoToClient {
             TileEntity te = McJtyLib.proxy.getClientWorld().getTileEntity(pos);
             if (te instanceof ModularStorageTileEntity) {
                 ModularStorageTileEntity storage = (ModularStorageTileEntity) te;
-                storage.syncInventoryFromServer(sortMode, viewMode, groupMode, filter);
+                storage.syncInventoryFromServer(sortMode, viewMode, groupMode, filter, locked);
             }
         });
         ctx.setPacketHandled(true);
